...
        <scene sceneID="pY4-Hu-kfo">
            <objects>
                <navigationController title="List" id="RMx-3f-FxP" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="Pmd-2v-anx">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
...
        <scene sceneID="GhW-Uj-XKh">
            <objects>
                <tableViewController title="Journal Entry" id="yOJ-ue-aRd" customClass="EntryViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="mqJ-d7-0Ct">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b1z-KL-2mv">
                                                    <rect key="frame" x="20" y="11" width="374" height="30"/>
                                                    <accessibility key="accessibilityConfiguration" label="Tap to change date"/>
                                                    <state key="normal" title="Date"/>
                                                    <connections>
...
        <scene sceneID="3AC-Mf-0Ej">
            <objects>
                <collectionViewController title="Calendar" id="8AQ-s7-GfR" customClass="CalendarCollectionViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="nnq-wZ-ki3">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
        <scene sceneID="r7l-gg-dq7">
            <objects>
                <navigationController title="New Entry" id="vC3-pB-5Vb" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="DjV-YW-jjY">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
...
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Select Date" id="30U-Vz-iyu">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="6uV-j2-prf">
                            <connections>
...
                                                    </connections>
                                                </switch>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Require Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ioj-zt-YiC">
                                                    <rect key="frame" x="25" y="11.5" width="312" height="21"/>
                                                    <accessibility key="accessibilityConfiguration" label="Require Password"/>
...
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M4I-FB-y0V">
                                                    <rect key="frame" x="28" y="7" width="366" height="30"/>
                                                    <accessibility key="accessibilityConfiguration" label="Export Entries"/>
                                                    <state key="normal" title="Export Entries"/>
                                                    <connections>
...
