...
    
    
    // MARK: - UITextViewDelegate Methods
    
    func textViewDidChange(_ textView: UITextView) {
        edited = true
        saveButton.title = "Save"
        if invalidDate == false {
            saveButton.isEnabled = true
        }
        
        // If user started to create new entry but then deleted the
        // text, assume they didn't mean to create the entry and
...
        }
        let captionActionTitle = NSLocalizedString("Caption", comment: "")
        let captionAction = UIAlertAction(title: captionActionTitle, style: .default) { (action) in
            self.attributedTextModel.applyStyleToSelection(UIFont.TextStyle.caption1.rawValue)
        }
        
        let cancelActionTitle = NSLocalizedString("Cancel", comment: "")
        let cancelAction = UIAlertAction(title: cancelActionTitle, style: .cancel, handler: nil)
        
        alert.addAction(titleAction)
        alert.addAction(subHeadlineAction)
        alert.addAction(bodyAction)
        alert.addAction(footnoteAction)
...
